test/libyul/yulSyntaxTests/objects/object_bin_name.yul
object bin"11001100" {
  code {}
}
// ----
// ParserError 2314: (7-20): Expected 'StringLiteral' but got 'BinStringLiteral'
